--- a/products.html
+++ b/products.html
@@ -29,6 +29,7 @@
             <input type="text" id="search-input" placeholder="搜尋商品..." oninput="searchProducts()">
             <select id="category-filter" onchange="filterByCategory()">
                 <option value="">所有分類</option>
+                <option value="海洋星座">海洋星座 🔱</option>
                 <option value="生活用品">生活用品</option>
                 <option value="文具用品">文具用品</option>
                 <option value="飾品配件">飾品配件</option>
