--- a/admin-product-form.html
+++ b/admin-product-form.html
@@ -32,6 +32,7 @@
                     <label>商品分類 *</label>
                     <select id="product-category" required>
                         <option value="">請選擇分類</option>
+                        <option value="海洋星座">海洋星座 🔱</option>
                         <option value="生活用品">生活用品</option>
                         <option value="文具用品">文具用品</option>
                         <option value="飾品配件">飾品配件</option>
